cargo-features = ["profile-rustflags","trim-paths"]

[package]
name = "tcp_tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.5"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
serde = {version="1.0",features= ["derive"]}
rand = "0.9.1"
socket2 = "0.5.10"

[profile.release]
strip = true
panic = 'abort'
lto = true
opt-level = 'z'
codegen-units = 1
trim-paths = "all"
